GNOME Bugzilla – Bug 663440
CD does not resume playing after pausing
Last modified: 2012-11-14 10:08:16 UTC
I am currently running version 2.90.1 in Fedora 15. There's a problem where when I press the "play" button after pausing playback of a CD, playback doesn't resume. The button is pressed, but the CD remains paused. The only way around this is to eject the CD, reinsert it and play from where I want it to.
please investigate with this terrible bug!
Reproduced in Ubuntu 12.04 rhythmbox 2.95-5ubuntu1 (bug https://bugs.launchpad.net/ubuntu/+source/rhythmbox/+bug/954951) Debug log: https://launchpadlibrarian.net/96778606/rhythmbox-debug.txt
This is limited to only .wav files. CD with .mp3 works properly.
Created attachment 227220 [details] [review] cleanup the 'open location' thread This issue is due to the incomplete cleanup in the 'open location' thread, which will lead to a checking always failed when resumed or another track played. My patch may fix this issue, and it works for me.
Thanks for the patch, but this isn't quite the right fix. The playlist parser thread isn't supposed to refer to the main thread's cancellable, because the user might have started playing something else by the time it runs. Instead, the shell player should have been clearing its pointer to the cancellable when pausing playback. I've made this change in commit 98e5a25.
this means that with the next version of rhythmbox we can pause CD playing with no problems?
*** Bug 688264 has been marked as a duplicate of this bug. ***
The following commit fixes this [1]. commit 98e5a25b3c32c9915357968a78783c1ac21c7130 Author: Jonathan Matthew <jonathan@d14n.org> Date: Sun Oct 28 14:02:53 2012 +1000 shell-player: clear playlist parser cancellable when pausing https://bugzilla.gnome.org/show_bug.cgi?id=663440 [1] http://git.gnome.org/browse/rhythmbox/commit/?id=98e5a25b3c32c9915357968a78783c1ac21c7130