shell-player: clear playlist parser cancellable when pausing

https://bugzilla.gnome.org/show_bug.cgi?id=663440